--- a/routing-examples/DynamicAndNestedExample/public/index.html
+++ b/routing-examples/DynamicAndNestedExample/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>The Shape Store</title>
+    <title>Dynamic and nested routes example</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
